# flamewidgets

./: README.md  demo.py  pyproject.toml
src/flamewidgets/: __init__.py  flame_button.py  flame_label.py  flame_line_edit.py  flame_line_edit_file_browse.py  flame_list_widget.py  flame_push_button.py  flame_push_button_menu.py  flame_text_edit.py  flame_token_push_button.py  flame_tree_widget.py
